<resources>
  <string name="app_name">I am here</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="next">Next</string>
  <string name="enter_your_phone_number">Enter your phone number</string>
  <string name="terms_and_policy">
    By signing up you accept our
    <a href="http://tuga.com.tr/yonetici-gizlilik-sozlesmesi.html">Terms of Service</a>
    and
    <a href="http://tuga.com.tr/yonetici-gizlilik-sozlesmesi.html">Privacy Policy</a>
  </string>
  <string name="terms_link">http://tuga.com.tr/yonetici-gizlilik-sozlesmesi.html</string>
  <string name="privacy_link">http://tuga.com.tr/yonetici-gizlilik-sozlesmesi.html</string>
  <string name="terms_of_service_text">Terms of Service</string>
  <string name="privacy_policy_text">Privacy Policy</string>
  <string name="phone_number_title">Phone Number</string>
  <string name="password_title">Password</string>
  <string name="email_title">Email</string>
  <string name="profile_title">Profile</string>
  <string name="location_permission_title">Location Sharing</string>
  <string name="join_circle_title">Join Circle</string>
  <string name="create_circle_title">Create Circle</string>
  <string name="password_description_text">password must be at least 6</string>
  <string name="create_password_title">Create Password</string>
  <string name="email_description_text">Add your email to make sure you can recover your password if you forget it</string>
  <string name="enter_email_address">Enter your email address</string>
  <string name="profile_description_text">This is how your appear on your map</string>
  <string name="enter_your_name">Enter your name</string>
  <string name="profile_image">Profile Image</string>
  <string name="add_photo">Add Photo</string>
  <string name="select_from_camera">Take Photo</string>
  <string name="select_from_gallery">Select Photo</string>
  <string name="cancel">Cancel</string>
  <string name="location_share_privacy">Your location data will only be shared in accordance with our privacy policy</string>
  <string name="okay">Okay</string>
  <string name="permission_for_location_des">IamHere needs access to your location to work properly</string>
  <string name="permission_location_title">Allow IamHere to access location</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="could_not_get_image">There was a problem fetching image, Please try again</string>
  <string name="verify">Verify</string>
  <string name="sms_verification_title">SMS Verification</string>
  <string name="sms_verification_required">Please fill all the inputs</string>
  <string name="empty_state_message">No results found, please try again.</string>
  <string name="sms_code_not_correct">Entered code not valid. Please check the code and verify again</string>
  <string name="verification_code_will_be_send">Verification code will be send in a second.</string>
  <string name="resend_code_message">Please resend the code</string>
  <string name="sms_verification_quote">SMS has been sent to you on your mobile number. please enter it below.</string>
  <string name="verify_mobile_number">Verify Mobile Number</string>
  <string name="could_not_register_user_error">Your registration could not be complete. please try again.</string>
  <string name="registration_successful">Registration Successful</string>
  <string name="join_circle_description">Get the code from the person \n setting up your circle</string>
  <string name="joining_circle_header">Joining a Circle? \n Enter your invite Code</string>
  <string name="submit">Submit</string>
  <string name="or">OR</string>
  <string name="don_have_code_title">Don\'t Have a code?</string>
  <string name="btn_create_new_circle">Create a New Circle</string>
  <string name="create_new_circle_description">We\'ll give you a code to share</string>
  <string name="enter_circle_code_correctly">Please enter code correctly</string>
  <string name="could_not_join_to_network">Could not join to circle. please check the code and try again</string>


<!--  material design -->
  <!--BottomAppBar-->
  <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
  <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
  <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
  <string name="fab_compose_email_content_description">Compose new email</string>
  <string name="fab_reply_email_content_description">Reply to email</string>

  <!--BottomSheet menus-->
  <string name="menu_item_forward">Forward</string>
  <string name="menu_item_reply">Reply</string>
  <string name="menu_item_reply_all">Reply all</string>
  <string name="menu_item_archive">Archive</string>
  <string name="menu_item_delete">Delete</string>
  <string name="menu_item_star">Star</string>
  <string name="menu_item_search">Search</string>
  <string name="menu_item_settings">Settings</string>

  <string name="menu_dark_theme_light">Light</string>
  <string name="menu_dark_theme_dark">Dark</string>
  <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
  <string name="menu_dark_theme_system_default">System default</string>

  <!--BottomNavigationDrawer-->
  <string name="navigation_inbox">Inbox</string>
  <string name="navigation_starred">Starred</string>
  <string name="navigation_sent">Send</string>
  <string name="navigation_trash">Trash</string>
  <string name="navigation_spam">Spam</string>
  <string name="navigation_drafts">Drafts</string>

  <!--ComposeFragment-->
  <string name="compose_close_content_desc">Close editing email</string>
  <string name="compose_send_content_desc">Send email</string>
  <string name="compose_add_recipient_icon_content_desc">Add recipient</string>
  <string name="compose_subject_hint">Subject</string>
  <string name="compose_body_hint">New message…</string>
  <string name="compose_recipient_group_content_desc">Recipients</string>
</resources>
