<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <data>
    <variable
        name="viewModel"
        type="com.tuga.konum.view.ui.signup.SignupActivityViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@={viewModel.username}"
        app:layout_constraintBottom_toTopOf="@id/profileDescription"
        />

    <TextView
        android:id="@+id/profileDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/profile_description_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnProfileNext"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProfileNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="@{viewModel.username.length() > 0}"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
