<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <data>

    <variable
        name="viewModel"
        type="com.tuga.konum.view.ui.signup.password.PasswordViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="15"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@={viewModel.password}"
        app:layout_constraintBottom_toTopOf="@id/passwordDescription"
        />

    <TextView
        android:id="@+id/passwordDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/password_description_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnPasswordNext"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPasswordNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="@{viewModel.isPasswordCorrect}"
        android:onClick="@{() -> viewModel.passwordNextOnClick()}"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
