<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <data>
    <variable
        name="viewModel"
        type="com.tuga.konum.view.ui.signup.email.EmailViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/emailDescription"
        >
      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:gravity="center"
          android:hint="@string/enter_email_address"
          android:importantForAutofill="no"
          android:inputType="textEmailAddress"
          android:maxLength="30"
          android:selectAllOnFocus="true"
          android:singleLine="true"
          android:text="@={viewModel.email}"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="200dp"
        android:text="@string/email_description_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnEmailNext"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEmailNext"
        style="@style/signupExtendedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="@{viewModel.isEmailCorrect}"
        android:onClick="@{() -> viewModel.emailNextOnClick()}"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
