<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2019 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
  <androidx.core.widget.NestedScrollView
      android:id="@+id/nested_scroll_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="?android:colorBackground"
      android:clipToPadding="false"
      android:fillViewport="true"
      android:paddingHorizontal="@dimen/grid_0_5"
      android:paddingTop="@dimen/grid_1"
      app:paddingTopSystemWindowInsets="@{true}"
      >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/places_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/grid_2"
          >

        <ImageButton
            android:id="@+id/close_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_1"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/compose_close_content_desc"
            android:padding="@dimen/min_icon_target_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/color_on_surface_emphasis_disabled"
            />

        <EditText
            android:id="@+id/subject_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:background="@android:color/transparent"
            android:hint="@string/compose_subject_hint"
            android:minHeight="@dimen/min_touch_target_size"
            android:paddingVertical="@dimen/grid_1"
            android:text="@{email.subject}"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toStartOf="@+id/send_icon"
            app:layout_constraintStart_toEndOf="@id/close_icon"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/send_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_1"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:contentDescription="@string/compose_send_content_desc"
            android:focusable="true"
            android:padding="@dimen/min_icon_target_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twotone_send"
            app:tint="?attr/colorPrimary"
            />

        <ImageView
            android:id="@+id/subject_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_1"
            android:background="@drawable/divider"
            app:backgroundTint="@color/color_on_surface_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_edit_text"
            />

        <Spinner
            android:id="@+id/sender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:layout_marginEnd="@dimen/grid_1"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subject_divider"
            app:popupElevationOverlay="@{@dimen/plane_16}"
            />

        <ImageView
            android:id="@+id/sender_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_0_5"
            android:background="@drawable/divider"
            app:backgroundTint="@color/color_on_surface_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender_spinner"
            />


      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

  </androidx.core.widget.NestedScrollView>

</layout>
